Regression: Major performance regression in sculpt mode using the material color shading #98879

Closed
opened 2022-06-14 11:37:56 +02:00 by Nelson · 8 comments

System Information
Operating system: Windows 10
Graphics card: Quadro m1000m

Blender Version
Broken: blender-3.3.0-alpha+master.c55dac9904d7-windows.amd64-release
Worked: builds from last week or so.

Caused by afe57c4001

Short description of error
The navigation/sculpting becomes unusable slow in sculpt mode when using the material color shading type.
If I switch to other color types like object/attribute/single/random things go back to normal (not to mention that if I switch back to material or texture, it crashes, but that's in another report )

Is this slowdown expected because of the new "PBVH Draw Support for EEVEE" feature?

Exact steps for others to reproduce the error
To replicate you'll need a little bit of polygons. In my case around 1 million and half polys was enough

So open blender
Add a subdivision surface to the cube and set the viewport level to about 9
Apply the modifier
Switch to sculpt mode (you should be in material shading already)
Try to orbit the scene
As you can see, everything is super laggy and impossible to work
Now switch to other color types (object/attribute/single/random) and everything is normal again

blender_2022-06-14_10-00-20.mp4

**System Information** Operating system: Windows 10 Graphics card: Quadro m1000m **Blender Version** Broken: blender-3.3.0-alpha+master.c55dac9904d7-windows.amd64-release Worked: builds from last week or so. Caused by afe57c4001 **Short description of error** The navigation/sculpting becomes unusable slow in sculpt mode when using the material color shading type. If I switch to other color types like object/attribute/single/random things go back to normal (not to mention that if I switch back to material or texture, it crashes, but that's in another [report ](https://developer.blender.org/T98842) ) Is this slowdown expected because of the new "PBVH Draw Support for EEVEE" feature? **Exact steps for others to reproduce the error** To replicate you'll need a little bit of polygons. In my case around 1 million and half polys was enough So open blender Add a subdivision surface to the cube and set the viewport level to about 9 Apply the modifier Switch to sculpt mode (you should be in material shading already) Try to orbit the scene As you can see, everything is super laggy and impossible to work Now switch to other color types (object/attribute/single/random) and everything is normal again [blender_2022-06-14_10-00-20.mp4](https://archive.blender.org/developer/F13161510/blender_2022-06-14_10-00-20.mp4)
Author

Added subscriber: @NelsonNAS

Added subscriber: @NelsonNAS
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

cant even navigate, already crashing :/ (might be #98842 though...)

cant even navigate, already crashing :/ (might be #98842 though...)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Caused by afe57c4001

CC @JosephEagar

Caused by afe57c4001 CC @JosephEagar
Philipp Oeser changed title from Major performance regression in sculpt mode using the material color shading to Regression: Major performance regression in sculpt mode using the material color shading 2022-06-14 12:35:10 +02:00

This issue was referenced by 7a24fe372c

This issue was referenced by 7a24fe372c2148bf28e3768d42c14192ed46c5d6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-06-14 19:03:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98879
No description provided.